# maplab

./: .gitignore
algorithms/loopclosure/loop-closure-handler/src/: loop-detector-node.cc
applications/online-map-server/: CMakeLists.txt  package.xml
applications/online-map-server/app/: online-map-server-app.cc
applications/online-map-server/include/online-map-server/: online-map-server.h  optimization.h
applications/online-map-server/src/: online-map-server.cc
applications/rovioli/: CMakeLists.txt  package.xml
applications/rovioli/include/rovioli/: online-map-publisher-flow.h  online-map-publisher.h  rovioli-node.h
applications/rovioli/scripts/: run_rovioli_rs
applications/rovioli/share/: maplab-sensors-realsenseD435i.yaml  ncamera-realsenseD435i.yaml  rovio-imu-realsenseD435i.yaml  rovio_test.info
applications/rovioli/src/: online-map-publisher-flow.cc  rovioli-node.cc
common/vio-common/include/vio-common/: map-update.h  vio-types.h
common/vio-common/proto/vio-common/: map_update.proto  vio_types.proto
maplab-launch/config/euroc-multi/calib/: euroc-mono0.yaml  euroc-mono1.yaml
maplab-launch/config/euroc-multi/ros/: euroc-maplab-node-rosparam.yaml  euroc-rovioli-rosparam.yaml
maplab-launch/launch/euroc/: euroc-mono-maplab-node-w-rovioli.launch  euroc-mono-rovioli-multi.launch  map_server_test.launch
