<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
        <name>online_map_server</name>
        <version>2.2.0</version>
        <description> Online map server for multi robot application </description>
        <maintainer email="xiangyu002@e.ntu.edu.sg">Mike Xiangyu Liu</maintainer>
        <license>Apache 2.0</license>

        <buildtool_depend>catkin_simple</buildtool_depend>
        <buildtool_depend>catkin</buildtool_depend>

        <depend>aslam_cv_cameras</depend>
        <depend>aslam_cv_common</depend>
        <depend>aslam_cv_frames</depend>
        <depend>aslam_cv_pipeline</depend>
        <depend>cv_bridge</depend>
        <depend>end_to_end_common</depend>
        <depend>feature_tracking</depend>
        <depend>gflags_catkin</depend>
        <depend>glog_catkin</depend>
        <depend>localization_summary_map</depend>
        <depend>loop_closure_handler</depend>
        <depend>maplab_common</depend>
        <depend>maplab_ros_common</depend>
        <depend>maplab_msgs</depend>
        <depend>mapping_workflows_plugin</depend>
        <depend>message_flow</depend>
        <depend>online_map_builders</depend>
        <depend>rovio</depend>
        <depend>sensors</depend>
        <depend>vi_map</depend>
        <depend>vi_mapping_test_app</depend>
        <depend>vio_common</depend>
        <depend>visualization</depend>
        <depend>map_sparsification</depend>
</package>
